# fastApiDbReader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.dist  pyproject.toml  requirements.txt
docker/: db_data.sh
src/: database.py  main.py  models.py  repository.py  router.py  schemas.py
