[tool.poetry]
name = "fastapidbreader"
version = "0.1.0"
description = ""
authors = ["Nadorozhnyy <59502289+Nadorozhnyy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
